@@ -155,3 +155,6 @@ allow clients use of all 'L' keys.
 	  client-switch.  Used by G15Macro if available.
 - Debug:  Add segfault handler to libg15daemon_client to aid debugging
 	  clients.
+- Feature: Add screendump ability.  Pressing M1+M3 simultaneously will write
+	  a pbm format image of the currently displayed screen to 
+	  /tmp/g15daemon-sc-?.pbm, where ? is an incremental number.
